--- a/gastritol-new/index-ru.html
+++ b/gastritol-new/index-ru.html
@@ -58,7 +58,7 @@
 <!--                            <a class=" where-to-buy" href="#block-4">ГДЕ КУПИТЬ</a>-->
 <!--                        </li>-->
                         <li>
-                            <a class="lang lang-dop"><b>UA</b></a><a class="lang" href="index-ru.html"><p>  RU</p></a>
+                            <a class="lang lang-dop" href="index.html"><p>UA</p></a><a class="lang"><b>  RU</b></a>
                         </li>
                     </ul>
                 </div>
@@ -96,6 +96,7 @@
 
     <div class="block-1">
         <div class="block-1_container">
+            <p class="black-title_mob">Я принимаю Гастритол.<br>И на это у меня <b>5 причин: </b></p>
             <div class="human-1"></div>
             <div class="block-1_text">
                 <p class="black-title">Я принимаю Гастритол.<br>И на это у меня <b>5 причин: </b></p>
@@ -114,6 +115,7 @@
         <div class="block-2_container">
             <div class="block-2_text">
                 <p class="white-title">У каждого свой <br><b>дискомфорт: </b></p>
+                <div class="human-2_mob"></div>
                 <div class="block-2_plates-container">
                     <div class="block-2_plate">
                         <b>Воспаление </b>
@@ -159,6 +161,7 @@
 
     <div class="block-3">
         <div class="block-3_container">
+            <p class="black-title_mob">Я за <b>натуральный </b> состав.<br> А вы?</p>
             <div class="human-3"></div>
             <div class="block-3_text">
                 <p class="black-title">Я за <b>натуральный </b> состав.<br> А вы?</p>
@@ -166,38 +169,52 @@
                 <div class="block-3_plates-container">
                     <div class="block-3_plate">
                         <div class="plate-img"></div>
+                        <div class="block-3_plate-sub">
                         <p class="plate-title">Зверобой</p>
                         <p>Успокаивает, нормализует выработку желудочного сока </p>
+                        </div>
                     </div>
                     <div class="block-3_plate">
                         <div class="plate-img"></div>
+                        <div class="block-3_plate-sub">
                         <p class="plate-title">Полынь горькая</p>
                         <p>Устраняет воспаление и тяжесть в желудке, облегчает пищеварение </p>
+                        </div>
                     </div>
                     <div class="block-3_plate">
                         <div class="plate-img"></div>
+                        <div class="block-3_plate-sub">
                         <p class="plate-title">Ромашка</p>
                         <p> Устраняет воспаление и аллергические реакции, способствует восстановлению </p>
+                        </div>
                     </div>
                     <div class="block-3_plate">
                         <div class="plate-img"></div>
+                        <div class="block-3_plate-sub">
                         <p class="plate-title">Корень дягиля</p>
                         <p>Улучшает кровообращение, способствует заживлению слизистой оболочки и лечению язвы</p>
+                        </div>
                     </div>
                     <div class="block-3_plate">
                         <div class="plate-img"></div>
+                        <div class="block-3_plate-sub">
                         <p class="plate-title">Корень солодки</p>
                         <p>Нормализует моторику желудочно-кишечного тракта, устраняет спазмы и боль </p>
+                        </div>
                     </div>
                     <div class="block-3_plate">
                         <div class="plate-img"></div>
+                        <div class="block-3_plate-sub">
                         <p class="plate-title">Кардобенедикт</p>
                         <p>Обезболивающее и желчегонное действия, ускоряет лечение язвенных поражений</p>
+                        </div>
                     </div>
                     <div class="block-3_plate">
                         <div class="plate-img"></div>
+                        <div class="block-3_plate-sub">
                         <p class="plate-title">Лапчатка гусиная</p>
                         <p>Устраняет боль, изжогу, вздутие и спазм</p>
+                        </div>
                     </div>
 
                 </div>
@@ -211,6 +228,7 @@
         <div class="block-4_container">
             <div class="block-4_text">
                 <p class="white-title"><b>Взболтай! </b>Перед<br> применением *</p>
+                <div class="human-4_mob"></div>
                 <p class="block-4_subtext">Продолжительность лечения - 3-4 недели. В случае необходимости курс<br> лечения можно повторить через 2 месяца.</p>
                 <div class="block-4_plates-container">
                     <div class="block-4_plate">
