--- a/gastritol-new/index.html
+++ b/gastritol-new/index.html
@@ -82,6 +82,32 @@
                 <p class="header-title_subtext"><b>Гастритол</b> - не носи<br>з собою гастрит</p>
             </div>
     </div>
+
+
+<!--////////// slider-->
+
+<div class="slider">
+    <div class="slider__wrapper">
+        <div class="slider__item">
+            <div class="slider-img-1"></div>
+        </div>
+        <div class="slider__item">
+            <div class="slider-img-2"></div>
+        </div>
+        <div class="slider__item">
+            <div class="slider-img-3"></div>
+        </div>
+        <div class="slider__item">
+            <div class="slider-img-4"></div>
+        </div>
+    </div>
+    <a class="slider__control slider__control_left" href="#" role="button"></a>
+    <a class="slider__control slider__control_right slider__control_show" href="#" role="button"></a>
+</div>
+
+<!--//////////slider-->
+
+
     <div class="custom-mob">
         <p>А як виглядає  твій гастрит?</p>
         <div class="header-title_product"></div>
@@ -96,6 +122,7 @@
 
     <div class="block-1">
         <div class="block-1_container">
+            <p class="black-title_mob">Я приймаю Гастритол.<br>І на це у мене <b>5 причин:</b></p>
             <div class="human-1"></div>
             <div class="block-1_text">
                 <p class="black-title">Я приймаю Гастритол.<br>І на це у мене <b>5 причин:</b></p>
@@ -114,6 +141,7 @@
         <div class="block-2_container">
             <div class="block-2_text">
                 <p class="white-title">У кожного свій<br><b>дискомфорт:</b></p>
+                <div class="human-2_mob"></div>
                 <div class="block-2_plates-container">
                     <div class="block-2_plate">
                         <b>Запалення</b>
@@ -159,6 +187,7 @@
 
     <div class="block-3">
         <div class="block-3_container">
+            <p class="black-title_mob">Я за <b>натуральний</b> склад.<br> А ви?</p>
             <div class="human-3"></div>
             <div class="block-3_text">
                 <p class="black-title">Я за <b>натуральний</b> склад.<br> А ви?</p>
@@ -166,38 +195,52 @@
                 <div class="block-3_plates-container">
                     <div class="block-3_plate">
                         <div class="plate-img"></div>
+                        <div class="block-3_plate-sub">
                         <p class="plate-title">ЗВІРОБІЙ</p>
                         <p>Заспокоює, нормалізує вироблення шлункового соку</p>
+                        </div>
                     </div>
                     <div class="block-3_plate">
                         <div class="plate-img"></div>
+                        <div class="block-3_plate-sub">
                         <p class="plate-title">ПОЛИН ГІРКИЙ</p>
                         <p>Усуває запалення та важкість у шлунку, полегшує травлення</p>
+                        </div>
                     </div>
                     <div class="block-3_plate">
                         <div class="plate-img"></div>
+                        <div class="block-3_plate-sub">
                         <p class="plate-title">РОМАШКА</p>
                         <p>Усуває запалення та алергічні реакції, сприяє відновленню</p>
+                        </div>
                     </div>
                     <div class="block-3_plate">
                         <div class="plate-img"></div>
+                        <div class="block-3_plate-sub">
                         <p class="plate-title">КОРІНЬ ДЯГЕЛЮ</p>
                         <p>Покращує кровообіг, сприяє загоєнню слизової оболонки та лікуванню виразки</p>
+                        </div>
                     </div>
                     <div class="block-3_plate">
                         <div class="plate-img"></div>
+                        <div class="block-3_plate-sub">
                         <p class="plate-title">КОРІНЬ СОЛОДКИ</p>
                         <p>Нормалізує моторику шлунково-кишкового тракту, усуває спазми та біль</p>
+                        </div>
                     </div>
                     <div class="block-3_plate">
                         <div class="plate-img"></div>
+                        <div class="block-3_plate-sub">
                         <p class="plate-title">КАРДОБЕНЕДИКТ</p>
                         <p>Знеболювальна та жовчогінна дії, прискорює лікування виразкових уражень</p>
+                        </div>
                     </div>
                     <div class="block-3_plate">
                         <div class="plate-img"></div>
+                        <div class="block-3_plate-sub">
                         <p class="plate-title">ПЕРСТАЧ ГУСЯЧИЙ</p>
                         <p>Усуває біль, печію, здуття та спазм</p>
+                        </div>
                     </div>
 
                 </div>
@@ -211,6 +254,7 @@
         <div class="block-4_container">
             <div class="block-4_text">
                 <p class="white-title"><b>Збовтай! </b>Перед<br> застосуванням*</p>
+                <div class="human-4_mob"></div>
                 <p class="block-4_subtext">Тривалість лікування – 3–4 тижні. У разі необхідності курс<br> лікування можна повторити через 2 місяці.</p>
                 <div class="block-4_plates-container">
                     <div class="block-4_plate">
