--- a/gastritol-new/index-ru.html
+++ b/gastritol-new/index-ru.html
@@ -75,13 +75,41 @@
 
 <!--    end navigation-->
 
-    <div class="header-custom">
+    <div class="header-custom header-custom_ru">
             <div class="header-title">
                 <p>А как выглядит твой гастрит?</p>
                 <div class="header-title_product"></div>
                 <p class="header-title_subtext"><b>Гастритол</b> - не носи<br>с собой гастрит</p>
             </div>
     </div>
+
+
+
+<!--////////// slider-->
+
+<div class="slider">
+    <div class="slider__wrapper">
+        <div class="slider__item">
+            <div class="slider-img-1 slider-img-1_ru"></div>
+        </div>
+        <div class="slider__item">
+            <div class="slider-img-2 slider-img-2_ru"></div>
+        </div>
+        <div class="slider__item">
+            <div class="slider-img-3 slider-img-3_ru"></div>
+        </div>
+        <div class="slider__item">
+            <div class="slider-img-4 slider-img-4_ru"></div>
+        </div>
+    </div>
+    <a class="slider__control slider__control_left" href="#" role="button"></a>
+    <a class="slider__control slider__control_right slider__control_show" href="#" role="button"></a>
+</div>
+
+<!--//////////slider-->
+
+
+
     <div class="custom-mob">
         <p>А как выглядит твой гастрит?</p>
         <div class="header-title_product"></div>
@@ -97,7 +125,7 @@
     <div class="block-1">
         <div class="block-1_container">
             <p class="black-title_mob">Я принимаю Гастритол.<br>И на это у меня <b>5 причин: </b></p>
-            <div class="human-1"></div>
+            <div class="human-1 human-1_ru"></div>
             <div class="block-1_text">
                 <p class="black-title">Я принимаю Гастритол.<br>И на это у меня <b>5 причин: </b></p>
                 <p class="block-1_reasons">Клинически доказана эффективность и высокий профиль безопасности. </p>
@@ -115,7 +143,7 @@
         <div class="block-2_container">
             <div class="block-2_text">
                 <p class="white-title">У каждого свой <br><b>дискомфорт: </b></p>
-                <div class="human-2_mob"></div>
+                <div class="human-2_mob human-2_mob-ru"></div>
                 <div class="block-2_plates-container">
                     <div class="block-2_plate">
                         <b>Воспаление </b>
@@ -153,7 +181,7 @@
                     <p>3. Синдром раздраженного кишечника </p>
                 </div>
             </div>
-            <div class="human-2"></div>
+            <div class="human-2 human-2_ru"></div>
         </div>
     </div>
 
@@ -162,7 +190,7 @@
     <div class="block-3">
         <div class="block-3_container">
             <p class="black-title_mob">Я за <b>натуральный </b> состав.<br> А вы?</p>
-            <div class="human-3"></div>
+            <div class="human-3 human-3_ru"></div>
             <div class="block-3_text">
                 <p class="black-title">Я за <b>натуральный </b> состав.<br> А вы?</p>
                 <p class="black-subtitle">Гастритол содержит <b>7 фитоэкстрактов: </b></p>
@@ -228,7 +256,7 @@
         <div class="block-4_container">
             <div class="block-4_text">
                 <p class="white-title"><b>Взболтай! </b>Перед<br> применением *</p>
-                <div class="human-4_mob"></div>
+                <div class="human-4_mob human-4_mob-ru"></div>
                 <p class="block-4_subtext">Продолжительность лечения - 3-4 недели. В случае необходимости курс<br> лечения можно повторить через 2 месяца.</p>
                 <div class="block-4_plates-container">
                     <div class="block-4_plate">
@@ -255,7 +283,7 @@
                         <br>Образование осадка (наблюдается в жидких формах препаратов, приготовленных на растительной основе) не вызывает отрицательных эффектов и не снижает эффективности препарата.</p>
                 </div>
             </div>
-            <div class="human-4"></div>
+            <div class="human-4 human-4_ru"></div>
         </div>
     </div>
 
