--- a/gastritol-new/index-ru.html
+++ b/gastritol-new/index-ru.html
@@ -341,7 +341,7 @@
                 Реклама лікарського засобу. Відпускається без рецепта. Перед застосуванням обов'язково проконсультуватися з лікарем та ознайомитися з інструкцією для застосування. Зберігати у недоступному для дітей місці. Солідагорен Р.П. UA/13795/01/01від 21.08.2019
             </p>
 
-            <a class="disclamer-tra__alpen disclamer-tra__klein klein-mob" href=""><p><b>Виробник</b><br>Др. Густав Кляйн<br> ГмбХ & Ко. КГ,<br>(Німеччина)</p></a>
+            <a class="disclamer-tra__alpen disclamer-tra__klein klein-mob" href=""><p><b>Виробник</b><br>Др. Густав Кляйн<br> ГмбХ & Ко. КГ, (Німеччина)</p></a>
             <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>Постачальник</b><br>Альпен Фарма АГ<br>(Швейцарія)</p></a>
         </div>
     </div>
