--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 			<a href="Tansilotren-BY/index.html">Tansilotren-BY</a>
 			<a href="Vaksol/index.html">Vaksol</a>
 			<a href="Solidagoren/index.html">Solidagoren</a>
-			<!-- <a href="gastritol-new/index.html">gastritol-new</a> -->
+			<a href="gastritol-new/index.html">gastritol-new</a>
+			<a href="Tansilotren-Moldova/index.html">Tansilotren-Moldova</a>
 
 			
 		</section>
@@ -197,6 +198,9 @@
 	}
 	a:nth-child(38)::before {
 		background: url("./gastritol-new/bg.jpg")no-repeat center / cover;
+	}
+	a:nth-child(39)::before {
+		background: url("./Tansilotren-Moldova/bg.png")no-repeat center / cover;
 	}
 </style>
 
