--- a/Tansilotren-Moldova/index.html
+++ b/Tansilotren-Moldova/index.html
@@ -55,7 +55,9 @@
         </div>
     </div>
 
-<a class="instruction" href="./instruction.pdf"></a>
+<a class="instruction" href="./instruction.pdf">
+            <p class="translated-text" key="instruction">Instrucțiune</p>
+      </a>
 
 <!--    end navigation-->
 
