--- a/Tansilotren-Moldova/index.html
+++ b/Tansilotren-Moldova/index.html
@@ -586,8 +586,8 @@
 
 
             <div class="logos-container">
-                <a class="disclamer-tra__logo" href=""><p><b>Изготовитель:</b><br>DHU (Германия)<br>https://www.dhu.de/</p></a>
-                <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>Поставщик:</b><br> Альпен Фарма АГ<br>(Швейцария)</p></a>
+                <a class="disclamer-tra__logo" href=""><p><b>Producător:</b><br>DHU (Germania)<br>https://www.dhu.de/</p></a>
+                <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>Importator:</b><br> Alpen Pharma<br>(Elveţia)</p></a>
             </div>
         </div>
     </div>
