--- a/gastritol-new/index.html
+++ b/gastritol-new/index.html
@@ -267,7 +267,7 @@
                         </p>
                     </div>
                     <div class="block-4_plate">
-                        <div class="block-4_plate-img"></div>
+                        <div class="block-4_plate-img block-4_plate-img-grown"></div>
                         <b>Дорослим<br>та дітям з 12 років</b>
                         <p>
                             приймати по 20–30 крапель, розчинених невеликою кількістю рідини, 3 рази на добу
