--- a/Tansilotren-KZ/index.html
+++ b/Tansilotren-KZ/index.html
@@ -99,7 +99,9 @@
             тиімділік<sup>5</sup>
         </p>
     </a>
-    <a name="block-1"></a>
+    <div class="test-test">
+        <a  name="block-1"></a>
+    </div>
 </div>
 <h2 class='block-4-h2'> Баспа ауруын алдын-алуға және<br> емдеуге арналған 5 табиғи компоненттер</h2>
 <div class="block-4__container">
