--- a/Tansilotren-Georgia/index.html
+++ b/Tansilotren-Georgia/index.html
@@ -100,7 +100,9 @@
             ეფექტურობა<sup>5</sup>
         </p>
     </a>
-    <a name="block-1"></a>
+    <div class="test-test">
+        <a  name="block-1"></a>
+    </div>
 
 </div>
 <h2 class='block-4-h2'> 5 ბუნებრივი კომპონენტი<br><b>ტონზილიტის პროფილაქტიკისა და მკურნალობისთვის</b></h2>
