--- a/Tansilotren-KZ/index-ru.html
+++ b/Tansilotren-KZ/index-ru.html
@@ -263,8 +263,8 @@
             <div class="plate-img"></div>
             <h3>Дети от 2 до 6 лет</h3>
             <p><b>При острых состояниях или для поддерживающей терапии:</b><br>по 1 табл. 3 раза в день.</p>
-            <!--            <div class="popup popup1">Детальнее</div>-->
-            <button class="popup-btn popup1" data-action="open1">Детальнее</button>
+            <!--            <div class="popup popup1">Подробнее</div>-->
+            <button class="popup-btn popup1" data-action="open1">Подробнее</button>
         </div>
 
 
@@ -279,13 +279,13 @@
             <div class="plate-img"></div>
             <h3>Дети от 6 до 12 лет</h3>
             <p><b>Острый период:</b><br>по 1 табл. каждые 2 часа (до 6 раз в день) первые 1-2 дня до улучшения.</p>
-            <button class="popup-btn popup2" data-action="open2">Детальнее</button>
+            <button class="popup-btn popup2" data-action="open2">Подробнее</button>
         </div>
         <div class="plate">
             <div class="plate-img"></div>
             <h3>Дети старше 12 лет и взрослые</h3>
             <p><b>Острый период:</b><br>по 1 табл.каждый час (до 12 раз в день) первые 1-2 дня до улучшения.</p>
-            <button class="popup-btn popup3" data-action="open3">Детальнее</button>
+            <button class="popup-btn popup3" data-action="open3">Подробнее</button>
         </div>
     </div>
     <a name="block-3"></a>
@@ -312,7 +312,7 @@
                     </p>
                 </div>
             </div>
-            <button class="accordion popup-btn block-5__popup">Детальнее</button>
+            <button class="accordion popup-btn block-5__popup">Подробнее</button>
 
             <div class="panel">
                 <p>ТОНЗИЛЛИТ – это острое или хроническое воспаление нёбных миндалин – образований на боковых поверхностях в глубине глотки, похожих на миндальные орехи. Миндалины пронизаны особыми щелями - лакунами. Лакуны - ловушки для микробов и вирусов, а также своеобразный «полигон», где иммунная система учится борьбе с этими микробами и вирусами. Именно миндалины первыми встречают болезнетворные микроорганизмы из внешней среды и обеспечивают защиту нашего организма. 
@@ -383,7 +383,7 @@
         </div>
 
 <!--        <div class="accordion-container">-->
-<!--            <button class="accordion popup block-5__popup accordion-right">Детальнее</button>-->
+<!--            <button class="accordion popup block-5__popup accordion-right">Подробнее</button>-->
 
 <!--            <div class="panel">-->
 <!--                <p>ОСТРЫЙ ТОНЗИЛЛИТ или АНГИНА – это острое инфекционное заболевание с преимущественным поражением миндалин. При этом страдают как сами миндалины, так и весь организм в целом. В большинстве случаев острый тонзиллит вызывают вирусы, но особенно опасны бактерии: стрептококки или стафилококки. Проявляется он сильной болью в горле, воспалением и увеличением в размере нёбных миндалин, высокой температурой. Возможно появление гнойных налётов. После перенесенной ангины снижается иммунитет и организму становится сложнее сопротивляться инфекциям.Если же в течение года  у человека два и более повторных эпизода острого тонзиллита, то речь уже идет о рекуррентном тонзиллите ( с латинского Recurrens - «возвратный, повторный»). Таким образом, РЕКУРРЕНТНЫЙ ТОНЗИЛЛИТ – это ни что иное, как обострение имеющегося ХРОНИЧЕСКОГО ТОНЗИЛЛИТА.</p>-->
@@ -428,7 +428,7 @@
                     <p>Современные тенденции в лечении хронического тонзиллита у детей основываются на максимально <b>бережном отношении к миндалинам</b> как иммунокомпетентному органу (органу, отвечающему за иммунитет), удаление которых оправдано только в случаях доказанной функциональной непригодности и гипертрофии лимфоглоточного кольца Вальдеера - Пирогова.</p>
                 </div>
             </div>
-            <button class="accordion popup-btn block-5__popup">Детальнее</button>
+            <button class="accordion popup-btn block-5__popup">Подробнее</button>
 
             <div class="panel">
                 <p>
@@ -477,7 +477,7 @@
                         Немного статистики.</p>
                 </div>
             </div>
-            <button class="accordion popup-btn block-5__popup accordion-right">Детальнее</button>
+            <button class="accordion popup-btn block-5__popup accordion-right">Подробнее</button>
 
             <div class="panel">
                 <p>
@@ -535,7 +535,7 @@
                         По возможности следует избегать курения и употребления алкоголя в острой воспалительной фазе. Они дополнительно раздражают и ослабляют слизистые оболочки.</p>
                 </div>
             </div>
-            <button class="accordion popup-btn block-5__popup">Детальнее</button>
+            <button class="accordion popup-btn block-5__popup">Подробнее</button>
 
             <div class="panel">
                 <p>
