--- a/Solidagoren/index.html
+++ b/Solidagoren/index.html
@@ -293,15 +293,38 @@
                 </div>
 
                 <div class="diet-container">
-                    <p class="diet-subtitle">Лікувальна дієта №14</p>
+                    <p class="diet-subtitle">Лікувальна дієта</p>
                     <p class="diet-title">при сечокам'яній хворобі</p>
                     <div class="diet-btn-container">
                         <div class="diet-acc">
                             <button class="accordion diet_btn">прочитати дієту</button>
                             <div class="panel">
                                 <p>
-                                    Лікувальна дієта №14, при сечокам'яній хворобі
-                                    Раціон дієти знаходиться у межах фізіологічної норми за показниками енергетичної цінності, кількості білків, жирів та вуглеводів. Дещо обмежена кількість продуктів, що чинять лужну дію та багаті на кальцій - молочні продукти, більшість овочів та плодів. Перевага надається продуктам, які змінюють реакцію сечі у кислу сторону - хліб, вироби із борошна, крупи, м'ясо, риба. Дозволені звичайна кулінарна обробка та стандартна температура страв. Якщо немає відповідних протипоказань, рекомендоване посилене споживання рідини. Рекомендований 4-разовий режим харчування та пиття між прийомами їжі і натщесерце.
+                                    ЗАГАЛЬНІ РЕКОМЕНДАЦІЇ ПРИ СЕЧОКАМ'ЯНІЙ ХВОРОБІ 
+
+Питний режим - приблизно 3 л води на добу. 
+
+Харчування дробне: 4-6 разів на добу.  
+
+Останнє приймання їжі повинно бути за 3 години до сну. 
+
+Один раз на тиждень - розвантажувальний день.  
+
+Виключити з раціону: жирну, кислу, гостру та надто солону їжу.  
+
+Дозволяється варити, тушкувати, запікати їжу, готувати на пару.  
+
+Уникати смаження та копчення.  
+
+Забороняється вживання алкоголю. 
+
+ 
+
+В залежності від складу каменів виділяють дозволені та заборонені продукти.  
+
+Ознайомтесь з повним списком продуктів, завантаживши дієту. 
+
+ 
                                 </p>
                             </div>
                         </div>
@@ -309,15 +332,34 @@
                     </div>
                 </div>
                 <div class="diet-container">
-                    <p class="diet-subtitle">Лікувальна дієта №7</p>
+                    <p class="diet-subtitle">Лікувальна дієта</p>
                     <p class="diet-title">при захворюваннях нирок</p>
                     <div class="diet-btn-container">
                         <div class="diet-acc">
                             <button class="accordion diet_btn">прочитати дієту</button>
                             <div class="panel">
                                 <p>
-                                    Лікувальна дієта №7, при захворюваннях нирок
-                                    При лікувальній дієті дещо обмежується споживання білків. Вміст жирів та вуглеводів залишається у рамках фізіологічної норми. Страви готують без солі. Дозволено споживання приблизно 1 л рідини на добу. Забороненими є екстрактивні речовини, що містяться у рибі, м'ясі, грибах. Не допускаються, також, продукти, що містять щавлеву кислоту та ефірні масла. Їжу готують в умовах помірного хімічного щадіння. М'ясо та рибу перед споживанням варто відварити. Забороненими є міцна кава, какао, мінеральна вода із підвищеним вмістом натрію. Рекомендованою є звичайна температура їжі.
+                                    ХАРЧУВАННЯ ПРИ ЗАХВОРЮВАННЯХ НИРОК 
+
+Споживання рідини зменшити до 1 л 
+
+Обмежити вміст білків у їжі.  
+
+Готувати без солі.  
+
+Харчування дробне: 4-5 разів на добу.  
+
+Їжу вживати звичайної кімнатної температури.  
+
+М'ясо і рибу обов'язково відварювати, добова порція не більше 100-150 г.  
+
+Калорійність дієти - 2700-2900 ккал. на добу 
+
+ 
+
+Для Вашої зручності ознайомтесь з повним списком продуктів, завантаживши дієту. 
+
+ 
                                 </p>
                             </div>
                         </div>
