--- a/Tansilotren-BY/index.html
+++ b/Tansilotren-BY/index.html
@@ -566,6 +566,29 @@
         </div>
 
         <div class="map-text">
+        	<h3>Побочные действия</h3>
+			<p>
+				 
+
+Возможно развитие аллергических реакций (например, зуд, кожная сыпь). 
+Возможно повышенное слюноотделение. 
+В случае возникновения нежелательных реакций, в том числе не указанных в данной инструкции, следует прекратить применение лекарственного средства и обратиться к врачу. 
+При приеме гомеопатических лекарственных средств возможно преходящее усиление существующих симптомов заболевания (первоначальное ухудшение); в этом случае следует прекратить прием лекарственного средства и проконсультироваться с врачом. 
+</p>
+
+<h3>Противопоказания. </h3>
+<p>
+Повышенная чувствительность к хрому или к какому-либо другому веществу, входящему в состав лекарственного средства. 
+</p>
+
+<h3>Меры предосторожности </h3>
+
+<p>Пациентам с заболеваниями щитовидной железы перед применением необходима консультация лечащего врача. При заболеваниях щитовидной железы (гипертиреоз) гомеопатическое средство принимать только по назначению лечащего врача. 
+Таблетки Тонзилотрен содержат лактозу. В связи с содержанием лактозы гомеопатическое средство не следует принимать пациентам с врожденной непереносимостью галактозы, дефицитом лактазы или мальабсорбцией глюкозы-галактозы. 
+Таблетки Тонзилотрен содержат сахарозу, что следует учитывать пациентам с сахарным диабетом. 
+В связи с содержанием сахарозы гомеопатическое средство не следует принимать пациентам с непереносимостью фруктозы, мальабсорбцией глюкозы-галактозы или дефицитом сахаразы-изомальтазы. 
+			</p>
+
             <h3>Доказательная база</h3>
             <ol>
                 <li>Friese K.H., Zabalotnyi D.I. [Гомеопатическое лечение тонзиллита нестрептококковой этиологии у детей...]. Der Kassenarzt 2006; 6: 40-42.</li>
@@ -580,8 +603,8 @@
     <div class="disclamer-tra__inner">
         <div class="disclamer-tra">
             <p class="dt1">
-                Предприятие-производитель: Немецкий Гомеопатический Союз (Deutsche Homoopathie-Union-DHU) Германия, Ottostrasse 24, 76227 Karlsruhe, Germany  Официальный представитель в РБ: АО «Alpen Pharma AG» (Швейцарская Конфедерация).
-                Представительство в РБ: 220053, г.Минск, ул. Пархоменко,3, офис 1Б. www.alpenpharma.com info.belarus@alpenpharma.com Номер регистрационного свидетельства МЗ РБ Таблетки №2882/97/02/07/13/18 от 11.04.2018 бессрочно
+                Предприятие-производитель: Немецкий Гомеопатический Союз (Deutsche Homoopathie-Union-DHU) Германия, Ottostrasse 24, 76227 Karlsruhe, Germany Официальный представитель в РБ: АО «Alpen Pharma AG» (Швейцарская Конфедерация).
+                Представительство в РБ: 220053, г.Минск, ул. Пархоменко,3, офис 1Б. www.alpenpharma.com info.belarus@alpenpharma.comНомер регистрационного свидетельства МЗ РБ Таблетки №2882/97/02/07/13/18 от 11.04.2018 бессрочно
             </p>
 
 
