--- a/Solidagoren/index-ru.html
+++ b/Solidagoren/index-ru.html
@@ -76,15 +76,15 @@
             <div class="header-title">
                 <b>Солидагорен<br> <p>Не ставь жизнь на паузу <br>из-за цистита!</p></b>
                 <div class="header-title_product"></div>
-                <p class="header-title_subtext"><b>Натуральное</b> лечение цистита<br>
-                    Путешествуем без лишних остановок</p>
+                <p class="header-title_subtext"><b>Натуральное</b> лечение заболеваний<br>
+                    мочевыделительной системы</p>
             </div>
     </div>
     <div class="custom-mob">
         <b>Солидагорен<br> <p>Не ставь жизнь на паузу из-за цистита!</p></b>
         <div class="header-title_product"></div>
-        <p class="custom-mob_sub"><b>Натуральное</b> лечение цистита
-            Путешествуем без лишних остановок</p>
+        <p class="custom-mob_sub"><b>Натуральное</b> лечение заболеваний
+             мочевыделительной системы</p>
     </div>
 
 
@@ -141,7 +141,7 @@
                             <li>Доказанная эффективность</li>
                             <li>Традиционно принимается в странах Европы для лечения цистита</li>
                             <li>Акваретик, не нарушает электролитный состав крови, поэтому можно принимать длительное время.</li>
-                            <li>Капли, в отличие от таблеток ..... (спиртовые капли не нуждаются во вспомогательных веществах, в отличие от таблеток / всасываются сразу ...???)</li>
+                            <li>Капли всасываются и действуют быстрее, чем твёрдые лекарственные формы (порошки, таблетки и др.).</li>
 
                         </ul>
                         <div class=test1end></div>
