--- a/Solidagoren/index.html
+++ b/Solidagoren/index.html
@@ -75,15 +75,15 @@
             <div class="header-title">
                 <b>Солідагорен<br> <p>Не став життя на паузу<br>через цистит!</p></b>
                 <div class="header-title_product"></div>
-                <p class="header-title_subtext"><b>НАТУРАЛЬНЕ</b> лікування циститу<br>
-                    Подорожуймо без зайвих зупинок</p>
+                <p class="header-title_subtext"><b>НАТУРАЛЬНЕ</b> лікування захворювань<br>
+                     сечовивідної системи</p>
             </div>
     </div>
     <div class="custom-mob">
         <b>Солідагорен<br> <p>Не став життя на паузу через цистит!</p></b>
         <div class="header-title_product"></div>
-        <p class="custom-mob_sub"><b>НАТУРАЛЬНЕ</b> лікування циститу
-            Подорожуймо без зайвих зупинок</p>
+        <p class="custom-mob_sub"><b>НАТУРАЛЬНЕ</b> лікування захворювань
+            сечовивідної системи</p>
     </div>
 
 
@@ -142,7 +142,7 @@
                             <li>Доведена ефективність</li>
                             <li>Традиційно приймається у країнах Европи для лікування циститу.</li>
                             <li>Акваретик, який не порушує електролітний склад крові, тому можна приймати тривалий час.</li>
-                            <li>Краплі, на відміну від таблеток, ..... (спиртові краплі не потребують допоміжних речовин, на відміну від таблеток / всмоктуюються одразу …)</li>
+                            <li>Краплі всмоктуються та діють швидше, ніж тверді лікарські форми (порошки, таблетки та ін.).</li>
 
                         </ul>
                         <div class=test1end></div>
