--- a/Tansilotren-BY/index.html
+++ b/Tansilotren-BY/index.html
@@ -560,10 +560,10 @@
             <a name="block-4"></a>
         </div>
 
-        <h1>Где купить</h1>
-        <div class="block-7__img">
-            <a class="where-to-buy where-to-buy__bottom" href="https://tabletka.by/search?request=%D1%82%D0%BE%D0%BD%D0%B7%D0%B8%D0%BB%D0%BE%D1%82%D1%80%D0%B5%D0%BD">Где купить</a>
-        </div>
+        <!-- <h1>Где купить</h1> -->
+        <a target="_blank" class="block-7__img" href="https://tabletka.by/search?request=%D1%82%D0%BE%D0%BD%D0%B7%D0%B8%D0%BB%D0%BE%D1%82%D1%80%D0%B5%D0%BD">
+            <div class="where-to-buy where-to-buy__bottom">Где купить</div>
+        </a>
 
         <div class="map-text">
         	<h3>Побочные действия</h3>
