--- a/Solidagoren/index-ru.html
+++ b/Solidagoren/index-ru.html
@@ -65,7 +65,7 @@
         </div>
     </div>
 
-<a class="instruction" href="./instruction.pdf">
+<a target="_blank" class="instruction" href="./instruction.pdf">
             <p class="translated-text" key="instruction">Инструкция</p>
       </a>
 
